--- a/android/res/values-cs/strings.xml
+++ b/android/res/values-cs/strings.xml
@@ -43,7 +43,7 @@
     <string name="download">Ke Stažení</string>
     <string name="update_title">Je Čas Aktualizovat!</string>
     <string name="update_message">FrostWire stahnoul novou AKTUALIZACE VÝKONNOSTI pro tebe, Prosím, jděte do toho a stiskněte tlačítko OK, pokud chcete nyní nainstalovat.</string>
-    <string name="about">O tom</string>
+    <string name="privacy">O tom</string>
     <string name="send_file_using">Odeslat soubor pomocí</string>
     <string name="downloads">Stahování</string>
     <string name="settings">Nastavení</string>
