--- a/android/res/values-da/strings.xml
+++ b/android/res/values-da/strings.xml
@@ -43,7 +43,7 @@
     <string name="download">Download</string>
     <string name="update_title">Opdater tid!</string>
     <string name="update_message">FrostWire har hentet ny RESULTATER OPDATERING for dig, gå venligst videre og tryk på OK-knappen, hvis du ønsker at installere det nu.</string>
-    <string name="about">Om</string>
+    <string name="privacy">Om</string>
     <string name="send_file_using">Send filen ved hjælp</string>
     <string name="downloads">Downloads</string>
     <string name="settings">Indstillinger</string>
