--- a/android/res/values-de/strings.xml
+++ b/android/res/values-de/strings.xml
@@ -43,7 +43,7 @@
     <string name="download">Download</string>
     <string name="update_title">Aktualisierungszeit!</string>
     <string name="update_message">FrostWire hat eine neues PERFORMANCE UPDATE für dich heruntergeladen. Tippe die OK-Schaltfläche an, wenn du die Update jetzt installieren willst.</string>
-    <string name="about">Über</string>
+    <string name="privacy">Über</string>
     <string name="send_file_using">Datei senden mit</string>
     <string name="downloads">Downloads</string>
     <string name="settings">Einstellungen</string>
