--- a/android/res/values-hi/strings.xml
+++ b/android/res/values-hi/strings.xml
@@ -43,7 +43,7 @@
     <string name="download">डाउनलोड</string>
     <string name="update_title"> अद्यतन समय!</string>
     <string name="update_message">फ्रॉस्टवाइर आप के लिए एक नया कार्य निष्पादन अद्यतन डाउनलोड किया गया है, आगे जाओ और ओके बटन को छुए  यदि आप इसे अब स्थापित करना चाहते हैं.</string>
-    <string name="about">के बारे में</string>
+    <string name="privacy">के बारे में</string>
     <string name="send_file_using">फ़ाइल का उपयोग कर भेजें</string>
     <string name="downloads">डाउनलोड</string>
     <string name="settings">वरीयताएँ</string>
