--- a/android/res/values-ms/strings.xml
+++ b/android/res/values-ms/strings.xml
@@ -276,7 +276,7 @@
     <string name="send_tip_donation">Menghantar derma.</string>
     <string name="type_to_filter_results">Taip untuk menapis keputusan.</string>
     <string name="file_descriptor_sd_unmounted">Fail ini tergolong ke kad SD, sila masukkannya pada peranti anda.</string>
-    <string name="about">Mengenai</string>
+    <string name="privacy">Mengenai</string>
     <string name="seeds">Benih</string>
     <string name="cheaper_than_beer">Lebih murah daripada bir</string>
     <string name="rating_reminder_description">Jika anda suka FrostWire sila ambil seketika untuk mengadar kami.</string>
