--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -43,7 +43,7 @@
     <string name="download">Download</string>
     <string name="update_title">Update Tijd!</string>
     <string name="update_message">FrostWire heeft een nieuwe PRESTATIE UPDATE voor je gedownload, ga verder en druk op de OK knop als je deze nu wilt installeren.</string>
-    <string name="about">Over</string>
+    <string name="privacy">Over</string>
     <string name="send_file_using">Verstuur file met gebruik van</string>
     <string name="downloads">Downloads</string>
     <string name="settings">Voorkeuren</string>
