--- a/android/res/values-pt/strings.xml
+++ b/android/res/values-pt/strings.xml
@@ -41,7 +41,7 @@
     <string name="download">Download</string>
     <string name="update_title">Atualizar Hora!</string>
     <string name="update_message">O FrostWire baixou uma nova ATUALIZAÇÃO DE DESEMPENHO para você, por favor, clique no botão OK se você deseja instalar.</string>
-    <string name="about">Sobre</string>
+    <string name="privacy">Sobre</string>
     <string name="send_file_using">Enviar arquivo utilizando</string>
     <string name="downloads">Baixados</string>
     <string name="settings">Preferências</string>
