--- a/android/res/values-ro/strings.xml
+++ b/android/res/values-ro/strings.xml
@@ -267,7 +267,7 @@
     <string name="send_tip_donation">Donație a trimite</string>
     <string name="type_to_filter_results">Tastați pentru a filtra rezultatele.</string>
     <string name="file_descriptor_sd_unmounted">Acest fisier apartine unui card SD, vă rugăm să-l introduceți pe dispozitiv.</string>
-    <string name="about">Despre</string>
+    <string name="privacy">Despre</string>
     <string name="seeds">Seminte</string>
     <string name="cheaper_than_beer">Mai ieftin decât bere</string>
     <string name="rating_reminder_description">Daca va place FrostWire, vă rugăm să luați un moment pentru a ne evaluați.</string>
