--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -44,7 +44,7 @@
     <string name="download">Скачать</string>
     <string name="update_title">Время обновлений!</string>
     <string name="update_message">FrostWire скачал новое ПОЛЕЗНОЕ ОБНОВЛЕНИЕ. Пожалуйста, нажмите кнопку ОК, если Вы хотите установить его прямо сейчас.</string>
-    <string name="about">О приложении</string>
+    <string name="privacy">О приложении</string>
     <string name="send_file_using">Отправить файл с помощью</string>
     <string name="downloads">Загрузки</string>
     <string name="settings">Настройки</string>
