--- a/android/res/values-sr/strings.xml
+++ b/android/res/values-sr/strings.xml
@@ -47,7 +47,7 @@
     <string name="select_all">Изабери све</string>
     <string name="update_title">Упдате тиме!</string>
     <string name="update_message">ФростВире је преузети нови ПЕРФОРМАНЦЕ УПДАТЕ за вас, изволите и додирните дугме ОК ако желите да га инсталирате сада.</string>
-    <string name="about">О томе</string>
+    <string name="privacy">О томе</string>
     <string name="remove_ads">Ремове Адс</string>
     <string name="remove_ads_description">Уживајте у без огласа искуства, подржава ФростВире</string>
     <string name="send_file_using">Пошаљи датотеку користећи</string>
