--- a/android/res/values-ur/strings.xml
+++ b/android/res/values-ur/strings.xml
@@ -279,7 +279,7 @@
     <string name="send_tip_donation">عطیہ کا حساب</string>
     <string name="type_to_filter_results">نتائج کو فلٹر کرنے ٹائپ کریں.</string>
     <string name="file_descriptor_sd_unmounted">یہ فائل ایک ایسڈی کارڈ سے تعلق رکھتا ہے، آپ کے آلے پر یہ داخل کریں براہ مہربانی.</string>
-    <string name="about">کے بارے میں</string>
+    <string name="privacy">کے بارے میں</string>
     <string name="seeds">بیج</string>
     <string name="cheaper_than_beer">بیئر سے سستا</string>
     <string name="rating_reminder_description">آپ FrostWire محبت ہے تو ہمیں شرح کے لئے ایک لمحے لے لو.</string>
