--- a/android/res/values-zh/strings.xml
+++ b/android/res/values-zh/strings.xml
@@ -43,7 +43,7 @@
     <string name="download">下载</string>
     <string name="update_title">更新时间!</string>
     <string name="update_message">FrostWire已为您下载强力更新包，如想现在安装，请按确定。</string>
-    <string name="about">关于</string>
+    <string name="privacy">隐私申明</string>
     <string name="send_file_using">发送文件使用</string>
     <string name="downloads">下载</string>
     <string name="settings">下载设置</string>
