--- a/android/res/values-ar/strings.xml
+++ b/android/res/values-ar/strings.xml
@@ -41,7 +41,7 @@
     <string name="download">تنزيل</string>
     <string name="update_title">!حان وقت التحديث</string>
     <string name="update_message">لقد قام فروست واير بتنزيل تحديث للأداء من أجلك,يرجى الاستمرار والضغط على موافق إذا كنت ترغب في تثبيته.</string>
-    <string name="about">حول</string>
+    <string name="privacy">حول</string>
     <string name="send_file_using">ارسال الملف باستخدام</string>
     <string name="downloads">التحميلات</string>
     <string name="settings">التفضيلات</string>
