--- a/android/res/values-es/strings.xml
+++ b/android/res/values-es/strings.xml
@@ -46,7 +46,7 @@
     <string name="download">Descargar</string>
     <string name="update_title">¡Es hora de actualizar!</string>
     <string name="update_message">FrostWire te ha descargado una ACTUALIZACIÓN DEL RENDIMIENTO nueva. Por favor, toca el botón de OK si quieres instalarla ahora.</string>
-    <string name="about">Acerca de</string>
+    <string name="privacy">Acerca de</string>
     <string name="send_file_using">Enviar el archivo usando</string>
     <string name="downloads">Descargas</string>
     <string name="settings">Preferencias</string>
