--- a/android/res/values-hu/strings.xml
+++ b/android/res/values-hu/strings.xml
@@ -269,7 +269,7 @@
     <string name="send_tip_donation">Küldj adományt</string>
     <string name="type_to_filter_results">Írja szűrheti a találatokat.</string>
     <string name="file_descriptor_sd_unmounted">Ez a fájl tartozik egy SD kártya, illessze be a készüléken.</string>
-    <string name="about">Körülbelül</string>
+    <string name="privacy">Körülbelül</string>
     <string name="seeds">Seeds</string>
     <string name="cheaper_than_beer">Olcsóbb, mint a sör</string>
     <string name="rating_reminder_description">Ha szeretsz FrostWire kérjük, szánjon egy kis értékeléshez minket.</string>
