--- a/android/res/values-in/strings.xml
+++ b/android/res/values-in/strings.xml
@@ -43,7 +43,7 @@
     <string name="download">Mengunduh</string>
     <string name="update_title">Perbarui Waktu!</string>
     <string name="update_message">FrostWire telah mengunduh PEMBARUAN PENAMPILAN baru untuk Anda, silahkan teruskan dan sentuh tombol OK bila Anda ingin menginstalnya sekarang.</string>
-    <string name="about">Tentang</string>
+    <string name="privacy">Tentang</string>
     <string name="send_file_using">Kirim Arsip dengan Menggunakan</string>
     <string name="downloads">Muat turun</string>
     <string name="settings">Preferensi</string>
