--- a/android/res/values-it/strings.xml
+++ b/android/res/values-it/strings.xml
@@ -43,7 +43,7 @@
     <string name="download">Download</string>
     <string name="update_title">E\' ora di aggiornare!</string>
     <string name="update_message">FrostWire ha scaricato un nuovo AGGIORNAMENTO per te, tocca il pulsante OK se vuoi installarlo ora</string>
-    <string name="about">FrostWire</string>
+    <string name="privacy">FrostWire</string>
     <string name="send_file_using">Invia file utilizzando</string>
     <string name="downloads">Downloads</string>
     <string name="settings">Preferenze</string>
