--- a/android/res/values-tr/strings.xml
+++ b/android/res/values-tr/strings.xml
@@ -41,7 +41,7 @@
     <string name="download">İndir</string>
     <string name="update_title">Güncelleme Zamanı!</string>
     <string name="update_message">FrostWire sizin için yeni bir PERFORMANS GÜNCELLEMESİ İndirdi, eğer şimdi kurmak istiyorsanız lütfen OK butonuna dokunup kuruluma devam ediniz.</string>
-    <string name="about">Hakkında</string>
+    <string name="privacy">Hakkında</string>
     <string name="send_file_using">Dosyayı şunu kullanarak gönder:</string>
     <string name="downloads">İndirilenler</string>
     <string name="settings">Tercihler</string>
